--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-networkx
-matplotlib
-node2vec
-scikit-learn
-numpy
+networkx==3.1
+matplotlib==3.7.1
+node2vec==0.4.6
+scikit-learn==1.2.2
+numpy==1.24.3
